<resources>
  <string name="app_name">复读机-View</string>

  <string name="setting_title">设置</string>
  <string name="setting_sub_folder">默认字幕文件夹</string>
  <string name="setting_sub_folder_desc">选择音视频后自动搜索字幕文件的位置</string>
  <string name="setting_clear_temp">清理缓存</string>
  <string name="setting_sentence_title">自动分句设置</string>
  <string name="setting_sentence_gap">最小句子间隔(毫秒)</string>
  <string name="setting_full_gesture">全屏快捷手势</string>
  <string name="setting_full_gesture_title">快捷手势</string>
  <string name="setting_full_gesture_desc">快速右滑: 切换上一句\n快速左滑: 切换下一句\n单击: 暂停/播放\n双击: 回到句首\n长按: 倍速播放\n左侧上下滑: 调整亮度\n右侧上下滑: 调整音量\n\n竖屏时, 默认仅在视频播放区域生效,此选项可以将手势扩展至全屏生效
  </string>
  <string name="setting_left_brightness">左侧亮度调整</string>
  <string name="setting_right_volume">右侧音量调整</string>
  <string name="setting_long_press_speed">长按播放倍速</string>
  <string name="setting_night_mode">暗色模式</string>

  <string name="sub_more_split_subtitle">重新自动分句</string>

  <string name="select_file">选择音视频</string>
  <string name="select_subtitle">设置字幕文件</string>
  <string name="disable_subtitle">禁用字幕</string>
  <string name="subtitle_track">字幕轨道 %d</string>
  <string name="subtitle_disabled">已禁用字幕</string>
  <string name="subtitle_switched">已切换字幕</string>

  <string name="playlist_item_move_to_first">移动到第一个</string>

  <string name="history_item_play">播放</string>
  <string name="history_item_play_next">下一个播放</string>
  <string name="history_item_add_more">追加到播放列表</string>
  <string name="history_item_delete">删除</string>

  <string name="repeat_one">单曲循环</string>
  <string name="repeat_all">列表循环</string>
  <string name="repeat_off">不循环</string>
  <string name="sleep_time_btn">定时关闭</string>
  <string name="sleep_time">倒计时: %1$s</string>
  <string name="sleep_time_title">定时器</string>

  <string name="merge_pre">合并上句</string>
  <string name="merge_next">合并下句</string>
  <string name="delete_sentence">删除句子</string>
  <string name="insert_sentence">插入句子</string>
  <string name="split_sentence">分割句子</string>

  <string name="current_no_sentence">当前没有选中任何句子</string>

  <string name="history_title">历史记录</string>
  <string name="enter_edit_mode">编辑句子</string>
  <string name="exit_edit_mode">退出编辑</string>
  <string name="current_list_title">当前播放</string>

  <string name="timer_turn_off">关闭定时</string>
  <string name="timer_10_minutes">10 分钟</string>
  <string name="timer_20_minutes">20 分钟</string>
  <string name="timer_30_minutes">30 分钟</string>
  <string name="timer_45_minutes">45 分钟</string>
  <string name="timer_60_minutes">60 分钟</string>
  <string name="timer_complete">播放完当前视频后</string>
  <string name="timer_set_toast">将在 %s 后停止播放</string>
  <string name="timer_set_off">定时已关闭</string>


  <string name="speed_0.25">0.25X</string>
  <string name="speed_0.5">0.5X</string>
  <string name="speed_0.75">0.75X</string>
  <string name="speed_1.0">1.0X</string>
  <string name="speed_1.25">1.25X</string>
  <string name="speed_1.5">1.5X</string>
  <string name="speed_2.0">2.0X</string>
</resources>