<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/main_bg_color"
  android:orientation="vertical">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_height="46dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/ib_back"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:paddingEnd="@dimen/setting_out_margin"
      android:paddingStart="@dimen/setting_out_margin"
      android:scaleType="centerInside"
      android:src="@drawable/ic_arrow_left"
      app:tint="@color/color_tint_selector"
      tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/ib_back"
      app:layout_goneMarginStart="@dimen/setting_out_margin"
      android:layout_marginBottom="2dp"
      android:fontFamily="sans-serif-medium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/setting_title"
      android:textColor="@color/main_text_color"
      android:includeFontPadding="false"
      android:textSize="20dp"
      app:layout_constrainedWidth="true"
      tools:ignore="SpUsage"
      tools:text="Setting" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <ScrollView
    android:overScrollMode="always"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
      app:cardCornerRadius="15dp"
      app:cardElevation="0dp"
      android:layout_marginTop="12dp"
      android:layout_marginStart="@dimen/setting_out_margin"
      android:layout_marginEnd="@dimen/setting_out_margin"
      android:layout_marginBottom="@dimen/setting_out_margin"
      app:cardBackgroundColor="@color/main_bg_color_on"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/setting_sub_folder"
          android:background="?android:attr/selectableItemBackground"
          android:layout_width="match_parent"
          android:layout_height="@dimen/setting_item_big"
          android:orientation="vertical"
          android:paddingHorizontal="@dimen/setting_item_padding_horizontal">

          <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="@dimen/setting_item_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sub_folder"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/setting_item_title_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/setting_sub_folder_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:textColor="@color/second_text_color"
            android:textSize="@dimen/setting_item_info_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/setting_item_bottom"
            tools:ignore="SpUsage"
            tools:text="123456" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_marginHorizontal="@dimen/setting_item_padding_horizontal"
          android:background="@color/divider_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/setting_clear_temp"
          android:background="?android:attr/selectableItemBackground"
          android:layout_width="match_parent"
          android:layout_height="@dimen/setting_item_big"
          android:orientation="vertical"
          android:paddingHorizontal="@dimen/setting_item_padding_horizontal">

          <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="@dimen/setting_item_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_clear_temp"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/setting_item_title_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/setting_clear_temp_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:textColor="@color/second_text_color"
            android:textSize="@dimen/setting_item_info_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/setting_item_bottom"
            tools:ignore="SpUsage"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_marginHorizontal="@dimen/setting_item_padding_horizontal"
          android:background="@color/divider_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/setting_sentence_gap"
          android:background="?android:attr/selectableItemBackground"
          android:layout_width="match_parent"
          android:layout_height="@dimen/setting_item_big"
          android:orientation="vertical"
          android:paddingHorizontal="@dimen/setting_item_padding_horizontal">

          <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="@dimen/setting_item_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sentence_gap"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/setting_item_title_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/setting_sentence_gap_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/second_text_color"
            android:textSize="@dimen/setting_item_info_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/setting_item_bottom"
            tools:ignore="SpUsage"
            tools:text="500" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </ScrollView>
</LinearLayout>